--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
 
           <ul>
               <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Portfolio</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Get Involved</a></li>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">News/Blog</a></li>
+              <li><a href="#">Resources</a></li>
+              <li class="donate-btn"><a href="#">Donate</a></li>
           </ul>
         </nav>
       </header><!-- /header -->
