--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
 	<meta charset="utf-8">
-	<title>Push Menus</title>
+	<title>Project Night Night</title>
 	<link href="https://file.myfontastic.com/MGBNLMU3WjcpkEBDsk5FqN/icons.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 	<meta name="handheldfriendly" content="true">
@@ -13,7 +13,11 @@
   <div class="site-wrapper" data-state="slide-closed">
     <div class="sliding-canvas">
       <header class="header">
-        <h1>Push Menu</h1>
+        <h1 id="logo">
+        <a href="">
+          <img class="img-flex logo" src="img/night-logo.svg" alt="Project Night Night Logo"/>
+        </a>
+      </h1>
           <!-- Menu Toggle Icon -->
         <a class="toggle-btn i-menu" href="#main-menu"><span>Menu</span></a>
 
