style(css): add spacing around burger and logo

--- a/index.html
+++ b/index.html
@@ -1,40 +1,42 @@
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
-	<meta charset="utf-8">
-	<title>Project Night Night</title>
-	<link href="https://file.myfontastic.com/MGBNLMU3WjcpkEBDsk5FqN/icons.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
-	<meta name="handheldfriendly" content="true">
-	<meta name="mobileoptimized" content="240">
-	<meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8">
+  <title>Project Night Night</title>
+  <link href="https://file.myfontastic.com/MGBNLMU3WjcpkEBDsk5FqN/icons.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+  <meta name="handheldfriendly" content="true">
+  <meta name="mobileoptimized" content="240">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
+
 <body class="noscript">
   <div class="site-wrapper" data-state="slide-closed">
     <div class="sliding-canvas">
-      <header class="header">
-        <h1 id="logo">
-        <a href="">
-          <img class="img-flex logo" src="img/night-logo.svg" alt="Project Night Night Logo"/>
-        </a>
-      </h1>
+      <header class="header grid">
+        <h1 id="logo island" class="unit unit-xs-1 unit-s-1 unit-m-1-4 unit-l-1-4">
+          <a href="">
+            <img class="img-flex logo" src="img/night-logo.svg" alt="Project Night Night Logo"/>
+          </a>
+        </h1>
           <!-- Menu Toggle Icon -->
+      <div class="unit unit-xs-1 unit-s-1 unit-m-3-4 unit-l-3-4">
         <a class="toggle-btn i-menu" href="#main-menu"><span>Menu</span></a>
 
         <nav class="navigation slide-menu">
 
         <a class="close-btn i-close" href="#main-menu"><span>Close</span></a>
 
-          <ul>
+          <ul class="milli">
               <li><a href="#">Home</a></li>
               <li><a href="#">About Us</a></li>
               <li><a href="#">Get Involved</a></li>
-              <li><a href="#">Contact Us</a></li>
               <li><a href="#">News/Blog</a></li>
               <li><a href="#">Resources</a></li>
-              <li class="donate-btn"><a href="#">Donate</a></li>
+              <li><a href="#">Donate</a></li>
           </ul>
         </nav>
+      </div>
       </header><!-- /header -->
 
       <main>
