feat(html/scss): add billboard and billboard img

--- a/index.html
+++ b/index.html
@@ -37,8 +37,15 @@
         </nav>
       </div>
       </header><!-- /header -->
-
+        <div class="grid">
+          <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
+            <div class="billboard">
+            <h2></h2>
+            </div>
+          </div>
+        </div>
       <main>
+
 
       </main><!-- /main -->
 
