--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
       </header><!-- /header -->
         <div class="grid">
           <div class="unit unit-xs-1 unit-s-1 unit-m-1 unit-l-1">
-            <div class="billboard">
-            <h2></h2>
+            <img class="img-flex" src="img/pnn-billboard.jpg">
             </div>
           </div>
         </div>
